# ClawCross

./: .gitignore  .npmignore  clawcross  clawcross.ps1  manual_run.ps1  manual_run.sh  package-lock.json  package.json
chatbot/: main.py
chatbot/adapters/: __init__.py  base.py  nonebot_bridge.py  webhook_adapter.py  weclaw_adapter.py
clawcross_cli/: channel_cmd.py  channels.py  display_cmd.py  main.py  model_cmd.py  providers.py
config/: .env.example  chatbot_channels.json
data/: whitelist.json
data/prompts/: base_system.txt  base_system_subagent.txt  external_agent_private_rules.txt  private_chat_rules.txt
data/team_presets/paper-review-council/skills/paper-survey/: SKILL.md  pyproject.toml  run.py  run.sh  runtime_config.example.json
data/team_presets/paper-review-council/skills/paper-survey/paper_survey/: __init__.py  __main__.py  analyzer.py  api.py  cli.py  config.py  downloader.py  llm.py  pdf_folder_batch.py  scraper.py  survey_generator.py
docs/: clawcross-shell.md  workflowpy.md  workflowpy_example.py
oasis/: engine.py  experts.py  server.py  workflow.py
scripts/: adduser.sh  clawcross  clawcross.py  cli.py  common.ps1  launcher.py  migrate_group_id_separator.py  migrate_to_user_home.py  setup_apikey.sh  setup_env.ps1  start.ps1  start.sh  tunnel.sh  weclaw_install.sh
src/: front.py
test/: test_external_agent_history.py  test_external_agent_history_routes.py  test_hermes_features.py  test_integration.py  test_new_features.py  test_proxy_login_i18n.py  test_vision_attachment_mcp.py  test_webot_context.py
tools/: run_self_update.py
(+68 files in other folders)
